syntax = "proto3";

package brand;

option go_package = "./pkg/pb";

service BrandService {
  rpc CreateBrand(CreateBrandRequest) returns (CreateBrandResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
}

// CreateBrand
message CreateBrandRequest {
  string brand_name = 1;
  string date_created = 2;
}

message CreateBrandResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// FindOne
message FindOneData {
  int64 id = 1;
  string brand_name = 2;
  string date_created = 3;
}

message FindOneRequest { 
  int64 id = 1; 
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}